k8s/boy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boy
  labels:
    app: kids
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kids
  template:
    metadata:
      labels:
        app: kids
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: boy
        image: "<youracr>.azurecr.io/boy:latest"
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 80
