k8s/publicIP.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: builder
  name: kids
spec:
  loadBalancerIP: 168.61.148.61
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: kids
