k8s/service-boy-int.yml
kind: Service
apiVersion: v1
metadata:
  name: boy-internal
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: boy
  type: ClusterIP
