k8s/service-girl-int.yml
kind: Service
apiVersion: v1
metadata:
  name: girl-internal
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: girl
  type: ClusterIP
